<resources>
    <string name="app_name">Emergency Notification</string>
    <string name="action_logout">Logout</string>
    <string name="input_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="situations">Situation:</string>
    <string name="blcat_activation">BLCAT Activation</string>
    <string name="cmt_notification">CMT Notification</string>
    <string name="cmt_activation">CMT Activation</string>
    <string name="station">Station:</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="telephone">Telephone</string>
    <string name="submit">Xác Nhận Gửi</string>
    <string name="blcat_1">BLCAT 1</string>
    <string name="blcat_2">BLCAT 2</string>
    <string name="sme">SME</string>
    <string name="receiver">Receiver:</string>
    <string name="btn">Button</string>
    <string name="loging_in">Longing in…</string>
    <string name="plz_wait">Please wait…</string>
    <string name="gbye">See Ya…</string>
    <string name="alert_wrong_input">Please Check Your Username or Password!!</string>
    <string name="no_pass" translatable="false">please enter password</string>
</resources>
